[package]
name = "betting"
version = "0.3.0"
edition = "2021"
description = "A crate to manage twitch-style bets (aka 'Parimutuel betting')"
license = "Unlicense"
repository = "https://github.com/Inspirateur/betting"
keywords = ["bets", "betting", "prediction", "wager", "outcome"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
itertools = "0.13"
thiserror = "2.0"
